{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "OnFoot",
            "id": "3fe64d4d-8686-49b4-a07a-08db656bb242",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "af208717-2a9c-407b-8c16-5e4b8a6504b4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b058c117-c5f6-4ab0-8301-c8353621af73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "d58a1712-4c2c-4436-ae8c-2e206fcc419c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c93c7ff6-4d39-4c52-92ab-6e549dd25bfb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interactuar",
                    "type": "Button",
                    "id": "edb146f2-7898-4eba-bd82-7b39696ad89e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorLock",
                    "type": "Button",
                    "id": "52ef91e7-a4e1-4255-9e25-69aae7ad8861",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleDebug",
                    "type": "Button",
                    "id": "e43c2e65-dcbc-4353-b89b-3af027d2f61d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExecuteCommand",
                    "type": "Button",
                    "id": "1eab16b6-1579-466c-84f2-be5c5eaa55de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6da14ac6-ba4d-48de-91d5-7b5ebdb39efc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "ece8c57a-9082-4c32-ae8a-672311bd4d35",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4fb654fe-0d58-4637-99d9-f5fbe935e578",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "60fa7c6b-52ca-4b89-a052-4f2c86da0e37",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "364138e9-6b02-4f32-8f56-798f69a92242",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ebcc2516-8ed1-44bb-a59c-433155179b07",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e885fee1-0634-45d5-b09d-c14393ccaa60",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3eaa539-2379-446f-8c96-6bf5d5301ab6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ebd334d-748e-4f30-8775-987dd7151001",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interactuar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1e5eed3-3c03-407f-b26e-33c8fe9d2b7d",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe581d28-292c-4fac-8317-3e8940a6444d",
                    "path": "<Keyboard>/quote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c2284e1-8079-4941-a685-478b75bcc9b0",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExecuteCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}